--- a/package.json
+++ b/package.json
@@ -10,5 +10,13 @@
   "license": "MIT",
   "bin": {
     "movable-parts": "bin/movable-parts.js"
+  },
+  "devDependencies": {
+    "eslint": "^7.18.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^5.0.0"
   }
 }
