--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^5.0.0"
+    "eslint-plugin-standard": "^5.0.0",
+    "http-server": "^0.12.3"
   },
   "type": "module",
   "module": "index.js"
